@@ -1,0 +1,19 @@
+/*
+** Copyright 2019 Double Precision, Inc.
+** See COPYING for distribution information.
+*/
+#include "libcxxw_config.h"
+#include "uicompiler.H"
+#include "messages.H"
+#include "x/w/menubarfactory.H"
+#include "x/w/uigenerators.H"
+#include "x/w/uielements.H"
+#include "x/w/all_appearances.H"
+#include "x/w/menu.H"
+
+LIBCXXW_NAMESPACE_START
+
+#include "uicompiler.inc.H/menubarfactory_parse_parameters.H"
+#include "uicompiler.inc.H/menubarfactory_parser.H"
+
+LIBCXXW_NAMESPACE_END
