@@ -1,3 +1,7 @@
+2019-09-16  Sam Varshavchik  <mrsam@courier-mta.com>
+
+	* Specify keyboard shortcuts for menus.
+
 0.25
 
 2019-07-07  Sam Varshavchik  <mrsam@courier-mta.com>
